--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -7,7 +7,7 @@
     tools:context=".PlanActivity">
 
     <Button
-        android:id="@+id/directions_btn"
+        android:id="@+id/plan_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
