--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/main_title" />
 
     <Button
-        android:id="@+id/directions_btn"
+        android:id="@+id/plan_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="144dp"
