--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:id="@+id/lv">
+        android:id="@+id/lv"
+        android:textFilterEnabled="true">
 
     </ListView>
     <LinearLayout
