--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:gravity="center|bottom"
+        android:gravity="right|bottom"
         android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/plan_btn"
             android:text="@string/plan"
-            android:layout_gravity="center_horizontal|center"
+            android:layout_gravity="right"
             />
     </LinearLayout>
 
