--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:textSize="45dp" />
 
     <TextView
-        android:id="@+id/exhibit_count"
+        android:id="@+id/selected_exhibit_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center|center_horizontal"
