Done with plan UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_gravity="center|center_horizontal"
         android:gravity="center"
         android:tag="count_tag"
-        android:text="(0)"
+        android:text="0"
         android:textSize="34sp" />
 
     <ListView
