--- a/app/src/main/res/layout/activity_directions_v2.xml
+++ b/app/src/main/res/layout/activity_directions_v2.xml
@@ -10,13 +10,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="164dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="164dp"
+        android:layout_marginBottom="8dp"
         android:text="Exhibit Name"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/directions_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.663"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="50dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
