--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginLeft="20dp"
-            android:foregroundGravity="right"
+            android:layout_weight="1"
             android:text="animal"
             android:textSize="20sp" />
 
