--- a/app/src/main/res/layout/selected_text.xml
+++ b/app/src/main/res/layout/selected_text.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/selectedtext"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="20dp">
 
     <TextView
         android:id="@+id/selected_tv"
-        android:layout_width="307dp"
-        android:layout_height="22dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:text="TextView"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
