--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -22,6 +22,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/mock_btn"
+        android:layout_width="158dp"
+        android:layout_height="48dp"
+        android:layout_weight="1"
+        android:onClick="onMockButtonClicked"
+        android:text="Mock Location"
+        tools:layout_editor_absoluteX="237dp"
+        tools:layout_editor_absoluteY="8dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/directions_recycler"
         android:layout_width="322dp"
