--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -83,5 +83,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <Button
+        android:id="@+id/back_btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onBackButtonClicked"
+        android:text="Back to Search"
+        tools:layout_editor_absoluteX="153dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
